Correct Button Visibility
Landing page now shows specific things based on whether a user is logged in or not

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -54,6 +54,10 @@
     .nav-item {
       margin: 10px 16px;
     }
+    .profile-item{
+      
+      visibility: hidden;
+    }
     .navbar-brand img {
       height: 46px;
       margin-right: 8px;
